Fixed body on mobile devices attempt

--- a/client/src/components/loop/loop.css
+++ b/client/src/components/loop/loop.css
@@ -5,7 +5,7 @@
     width: 3712px;
 }
 .scrolling__image {
-    position: fixed;
+    position: absolute;
     top: 0;
     height: 793px;
     width: 3712px;
